Refactor: Rename to IntimDiary, Redesign Dashboard, and Fix UI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intimome---intimacy-wellness-tracker",
+  "name": "intim-diary",
   "private": true,
   "version": "0.0.0",
   "type": "module",
