--- a/package.json
+++ b/package.json
@@ -5,26 +5,28 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "node server/index.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "pages:dev": "wrangler pages dev ./dist --d1=DB",
+    "deploy": "npm run build && wrangler pages deploy ./dist"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "lucide-react": "0.294.0",
+    "hono": "^4.6.0",
+    "lucide-react": "^0.468.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.2",
-    "recharts": "2.12.3"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241218.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "wrangler": "^3.95.0"
   }
 }
