feat: update UI theme from rose to indigo and add diverse chart colors
- Changed primary color scheme from rose (red) to indigo
- Updated StatsChart with diverse color palette for position chart
- Added .npm-cache to .gitignore
- Added new API endpoint files for auth and backup

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "node server/index.js",
-    "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\"",
+    "dev:full": "npx concurrently \"npm run dev\" \"npm run dev:server\"",
+    "dev:cf": "npx concurrently \"npm run dev\" \"npx wrangler pages dev ./dist --d1=DB --proxy 3000\"",
     "build": "vite build",
     "preview": "vite preview",
     "pages:dev": "wrangler pages dev ./dist --d1=DB",
