--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,3 +1,6 @@
 # Local development environment variables
-# Copy this to .dev.vars and fill in your values
-GEMINI_API_KEY=your-gemini-api-key-here
+# Copy this to .dev.vars and fill in your values (for Pages Functions)
+OPENROUTER_API_KEY=your-openrouter-api-key-here
+OPENROUTER_MODEL=openai/gpt-4o-mini
+GOOGLE_CLIENT_ID=your-google-client-id-here
+BACKUP_SECRET=your-backup-secret-here
