--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@cloudflare/workers-types": "^4.20241218.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
     "concurrently": "^9.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "terser": "^5.44.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "wrangler": "^3.95.0"
