--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@cloudflare/workers-types": "^4.20241218.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
