--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,30 @@
 {
-    "name": "IntimDiary",
-    "short_name": "IntimDiary",
-    "description": "私密亲密健康追踪应用",
-    "start_url": "/",
-    "scope": "/",
-    "display": "standalone",
-    "background_color": "#fafafa",
-    "theme_color": "#f43f5e",
-    "orientation": "portrait",
-    "icons": [
-        {
-            "src": "/favicon.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/favicon.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        }
-    ],
-    "categories": [
-        "health",
-        "lifestyle"
-    ],
-    "lang": "zh-CN",
-    "dir": "ltr",
-    "prefer_related_applications": false
+  "name": "IntimDiary",
+  "short_name": "IntimDiary",
+  "description": "私密亲密健康追踪应用",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#fafafa",
+  "theme_color": "#f43f5e",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "/favicon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "categories": ["health", "lifestyle"],
+  "lang": "zh-CN",
+  "dir": "ltr",
+  "prefer_related_applications": false
 }
+
