feat: improve quick log toast visibility and positioning
- Fixed toast positioning to use flexbox centering (inset-0) for perfect center alignment
- Changed background from transparent gradient to solid slate-900 for better text visibility
- Increased z-index to 9999 to ensure toast appears above confetti
- Added bounceIn animation with elastic easing for eye-catching appearance
- Confirmed haptic feedback already implemented for mobile/PWA usage
- Toast now displays prominently in screen center with clear white text

--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "deploy": "npm run build && wrangler pages deploy ./dist"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "bcryptjs": "^3.0.3",
+    "canvas-confetti": "^1.9.4",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "hono": "^4.6.0",
     "lucide-react": "^0.468.0",
     "react": "^19.2.0",
@@ -22,8 +28,9 @@
     "recharts": "^2.15.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@cloudflare/workers-types": "^4.20241218.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
