--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@types/d3": "^7.4.3",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "framer-motion": "^12.24.8",
     "hono": "^4.6.0",
     "lucide-react": "^0.468.0",
     "react": "^19.2.0",
